--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ ul, li, a {
     color: #0088a9;
 }
 
-button {
+.contact button {
     padding: 9px 20px;
     border-radius: 50px;
     font-family: Roboto, sans-serif;
@@ -51,10 +51,89 @@ button {
     background-color: rgba(0, 136, 169, 1);
 }
 
-button:hover {
+.contact button:hover {
     background-color: rgba(0, 136, 169, 0.7);
     color: #f9faf8;
 }
+
+/* Hero-container */
+
+.hero-container {
+    display: flex;
+    background-color: #1f2937;
+    padding: 60px 10%;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+
+.hero-container > * {
+    flex: 1;
+}
+
+.hero-main h1, .hero-main p, .hero-main button{
+    font-family: Roboto, sans-serif;
+}
+
+.hero-main h1 {
+    color: #f9faf8;
+    margin-bottom: 1rem;
+}
+
+.hero-main p {
+    color: #e5e7eb;
+    margin-bottom: 1rem;
+}
+
+.hero-container img {
+    width: 300px;
+    height: auto;
+}
+
+.hero-main button {
+    padding: 9px 20px;
+    color: #e5e7eb;
+    background-color: rgba(0, 136, 169, 1);
+    border: none;
+    border-radius: 10px;
+    font-size: 18px;
+}
+
+/* Port Section*/
+
+.port-container {
+    display: flex;
+    flex-direction: column;
+    padding: 50px 10%;
+}
+
+.port-container h2 {
+    align-self: center;
+    padding-bottom: 2rem;
+}
+
+.port-main {
+    display: flex;
+    gap: 2rem;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.projects img {
+    border: 4px solid #0088a9;
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 1rem;
+}
+
+.projects p {
+    text-align: center;
+    padding: 1rem 0;
+}
+
 
 @media screen and (max-width: 400px ){
     ul, li, a {
@@ -63,7 +142,7 @@ button:hover {
     .logo img {
         width: 30px;
     }
-    button {
+    .contact button {
         font-size: 10px;
     }
 }
