--- a/style.css
+++ b/style.css
@@ -72,6 +72,10 @@ ul, li, a {
     flex: 1;
 }
 
+.hero-main {
+    padding: 0px 40px;
+}
+
 .hero-main h1, .hero-main p, .hero-main button{
     font-family: Roboto, sans-serif;
 }
@@ -89,6 +93,7 @@ ul, li, a {
 .hero-container img {
     width: 300px;
     height: auto;
+    padding: 0 40px;
 }
 
 .hero-main button {
@@ -98,6 +103,12 @@ ul, li, a {
     border: none;
     border-radius: 10px;
     font-size: 18px;
+    cursor: pointer;
+}
+
+.hero-main button:hover {
+    background-color: rgba(0, 136, 169, 0.7);
+    color: #f9faf8;
 }
 
 /* Port Section*/
@@ -105,7 +116,7 @@ ul, li, a {
 .port-container {
     display: flex;
     flex-direction: column;
-    padding: 50px 10%;
+    padding: 50px 15%;
 }
 
 .port-container h2 {
@@ -135,14 +146,77 @@ ul, li, a {
 }
 
 
+/* Quote Section*/
+
+.quote-container {
+    display: flex;
+    flex-direction: column;
+    padding: 60px 15%;
+    background-color: #e5e7eb;
+}
+
+.quote-main {
+    color: #1f2937;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+    font-family: Helvetica, sans-serif;
+}
+
+.quote-container p {
+    align-self: flex-end;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    padding-top: 20px;
+    padding-right: 20px;
+}
+
+/* Contact section */
+
+.contact-container {
+    padding: 50px 10%;
+}
+
+.contact-main {
+    background-color: #3882f6;
+    padding: 40px 5%;
+    border-radius: 10px;
+}
+
+.contact-signup {
+    display: flex;
+}
+.contact-signup > * {
+    flex: auto;
+}
+
+/*Footer*/
+.footer {
+    padding: 10px;
+    background-color: #1f2937;
+    display: flex;
+    justify-content: center;
+}
+
+.footer footer {
+    color: #f9faf8;
+    padding: 1rem;
+}
 @media screen and (max-width: 400px ){
     ul, li, a {
-        font-size: 10px;
+        font-size: 20px;
     }
     .logo img {
         width: 30px;
     }
     .contact button {
         font-size: 10px;
+    }
+    .hero-main {
+        padding: 0px 0px;
+    }
+    .hero-container img {
+        padding: 0 20px;
     }
 }
